@@ -15,6 +15,8 @@
 * Fixed logic to decide which connection of a profile is the primary
 * Added relationships to the DB editor
 * Send mail to the bot master when a new command is created
+* ChatQueue will be cleared when changing channels
+* Never kick/ban without ops
 
 2.0.5 (r1300) 2008-04-09:
 * Added a Cayenne persistence layer to address database problems
